[package]
name = "blvm-stratum-v2"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Stratum V2 mining protocol module for blvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-stratum-v2"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "mining", "stratum", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "blvm-stratum-v2"
path = "src/main.rs"

[lib]
name = "blvm_stratum_v2"
path = "src/lib.rs"

[dependencies]
# blvm-node for module system integration
blvm-node = { path = "../blvm-node" }
# blvm-sdk for ModuleBootstrap (env-based bootstrap)
blvm-sdk = { path = "../blvm-sdk", default-features = false, features = ["node"] }
# blvm-sdk-macros for #[config]
blvm-sdk-macros = { path = "../blvm-sdk/crates/blvm-sdk-macros" }

# blvm-protocol for Block, BlockHeader, Transaction, Hash, etc.
blvm-protocol = { path = "../blvm-protocol" }

# blvm-consensus for proof of work validation
blvm-consensus = { path = "../blvm-consensus", package = "blvm-consensus" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures for async streams
futures = "0.3"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Serialization
bincode = "1.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"

